--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Faça como 92% dos Empresários Bem Sucedidos, tenha Outras Fontes de Renda e venha fazer parte deste Grupo Seleto"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
     <!--
